--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer.vcxproj
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer.vcxproj
@@ -120,7 +120,7 @@
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">copying model file locally, running obfuscation, deleting local copy of model file</Message>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>$(ProjectDir)PostBuildHeaderGen.cmd "$(TargetDir)" "$(WindowsSDK_UnionMetadataPath)" &amp;&amp; ^cppwinrt -in "$(TargetDir)Microsoft.AI.Skills.SkillInterfacePreview.winmd" -ref "$(TargetDir)." -ref "$(WindowsSDK_UnionMetadataPath)" -out "$(TargetDir)." &amp;&amp; ^cppwinrt -in "$(TargetDir)Contoso.FaceSentimentAnalyzer.winmd" -ref "$(TargetDir)." -ref "$(WindowsSDK_UnionMetadataPath)" -out "$(TargetDir)."</Command>
+      <Command>powershell -NoLogo -NonInteractive -Command .'$(ProjectDir)..\scripts\Skills_PostBuild.ps1' -TargetName:'$(TargetFileName)' -TargetDir:'$(TargetDir)' -ProjectDir:'$(ProjectDir)' -WindowsSDK_UnionMetadataPath:'$(WindowsSDK_UnionMetadataPath)'</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Release'">
@@ -140,7 +140,7 @@
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">copying model file locally, running obfuscation, deleting local copy of model file</Message>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>$(ProjectDir)PostBuildHeaderGen.cmd "$(TargetDir)" "$(WindowsSDK_UnionMetadataPath)" &amp;&amp; ^cppwinrt -in "$(TargetDir)Microsoft.AI.Skills.SkillInterfacePreview.winmd" -ref "$(TargetDir)." -ref "$(WindowsSDK_UnionMetadataPath)" -out "$(TargetDir)." &amp;&amp; ^cppwinrt -in "$(TargetDir)Contoso.FaceSentimentAnalyzer.winmd" -ref "$(TargetDir)." -ref "$(WindowsSDK_UnionMetadataPath)" -out "$(TargetDir)."</Command>
+      <Command>powershell -NoLogo -NonInteractive -Command .'$(ProjectDir)..\scripts\Skills_PostBuild.ps1' -TargetName:'$(TargetFileName)' -TargetDir:'$(TargetDir)' -ProjectDir:'$(ProjectDir)' -WindowsSDK_UnionMetadataPath:'$(WindowsSDK_UnionMetadataPath)'</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
